--- a/DS/css/style.css
+++ b/DS/css/style.css
@@ -18,7 +18,7 @@ div {
 }
 
 header {
-    background: url(../img/first-bg.jpg) no-repeat center top / cover;   
+    background: url(../DS/img/first-bg.jpg) no-repeat center top / cover;   
     height: 100vh;
 }
 
